// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Primary Button  should match the snapshot 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5BE59",
      "borderRadius": 75,
      "height": 107.8125,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    size="md"
    style={
      Array [
        Object {
          "color": "#353434",
          "fontSize": 32.8125,
          "fontWeight": "700",
        },
        Object {
          "color": "#353434",
        },
      ]
    }
    type="bold"
  >
    Primary Button
  </Text>
</View>
`;

exports[`Button Primary Button danger should match the snapshot 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#E03D17",
      "borderRadius": 75,
      "height": 107.8125,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    size="md"
    state="danger"
    style={
      Array [
        Object {
          "color": "#E03D17",
          "fontSize": 32.8125,
          "fontWeight": "700",
        },
        Object {},
      ]
    }
    type="bold"
  >
    Primary Button
  </Text>
</View>
`;

exports[`Button Primary Button info should match the snapshot 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#A9A8A3",
      "borderRadius": 75,
      "height": 107.8125,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    size="md"
    state="info"
    style={
      Array [
        Object {
          "color": "#A9A8A3",
          "fontSize": 32.8125,
          "fontWeight": "700",
        },
        Object {},
      ]
    }
    type="bold"
  >
    Primary Button
  </Text>
</View>
`;

exports[`Button Primary Button success should match the snapshot 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#9BDD44",
      "borderRadius": 75,
      "height": 107.8125,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    size="md"
    state="success"
    style={
      Array [
        Object {
          "color": "#9BDD44",
          "fontSize": 32.8125,
          "fontWeight": "700",
        },
        Object {},
      ]
    }
    type="bold"
  >
    Primary Button
  </Text>
</View>
`;

exports[`Button Primary Button warning should match the snapshot 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F37B0C",
      "borderRadius": 75,
      "height": 107.8125,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    size="md"
    state="warning"
    style={
      Array [
        Object {
          "color": "#F37B0C",
          "fontSize": 32.8125,
          "fontWeight": "700",
        },
        Object {},
      ]
    }
    type="bold"
  >
    Primary Button
  </Text>
</View>
`;

exports[`Button Primary Text Button  should match the snapshot 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FAFAFA",
      "borderRadius": 75,
      "height": 107.8125,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    size="md"
    style={
      Array [
        Object {
          "color": "#353434",
          "fontSize": 32.8125,
          "fontWeight": "700",
        },
        Object {
          "color": "#353434",
        },
      ]
    }
    type="bold"
  >
    Primary Text Button
  </Text>
</View>
`;

exports[`Button Primary Text Button danger should match the snapshot 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FAFAFA",
      "borderRadius": 75,
      "height": 107.8125,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    size="md"
    state="danger"
    style={
      Array [
        Object {
          "color": "#E03D17",
          "fontSize": 32.8125,
          "fontWeight": "700",
        },
        Object {},
      ]
    }
    type="bold"
  >
    Primary Text Button
  </Text>
</View>
`;

exports[`Button Primary Text Button info should match the snapshot 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FAFAFA",
      "borderRadius": 75,
      "height": 107.8125,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    size="md"
    state="info"
    style={
      Array [
        Object {
          "color": "#A9A8A3",
          "fontSize": 32.8125,
          "fontWeight": "700",
        },
        Object {},
      ]
    }
    type="bold"
  >
    Primary Text Button
  </Text>
</View>
`;

exports[`Button Primary Text Button success should match the snapshot 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FAFAFA",
      "borderRadius": 75,
      "height": 107.8125,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    size="md"
    state="success"
    style={
      Array [
        Object {
          "color": "#9BDD44",
          "fontSize": 32.8125,
          "fontWeight": "700",
        },
        Object {},
      ]
    }
    type="bold"
  >
    Primary Text Button
  </Text>
</View>
`;

exports[`Button Primary Text Button warning should match the snapshot 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FAFAFA",
      "borderRadius": 75,
      "height": 107.8125,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    size="md"
    state="warning"
    style={
      Array [
        Object {
          "color": "#F37B0C",
          "fontSize": 32.8125,
          "fontWeight": "700",
        },
        Object {},
      ]
    }
    type="bold"
  >
    Primary Text Button
  </Text>
</View>
`;

exports[`Button Secondary Button  should match the snapshot 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#353434",
      "borderRadius": 75,
      "height": 107.8125,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    size="md"
    style={
      Array [
        Object {
          "color": "#353434",
          "fontSize": 32.8125,
          "fontWeight": "700",
        },
        Object {
          "color": "#FAFAFA",
        },
      ]
    }
    type="bold"
  >
    Secondary Button
  </Text>
</View>
`;

exports[`Button Secondary Button danger should match the snapshot 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#353434",
      "borderRadius": 75,
      "height": 107.8125,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    size="md"
    state="danger"
    style={
      Array [
        Object {
          "color": "#E03D17",
          "fontSize": 32.8125,
          "fontWeight": "700",
        },
        Object {},
      ]
    }
    type="bold"
  >
    Secondary Button
  </Text>
</View>
`;

exports[`Button Secondary Button info should match the snapshot 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#353434",
      "borderRadius": 75,
      "height": 107.8125,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    size="md"
    state="info"
    style={
      Array [
        Object {
          "color": "#A9A8A3",
          "fontSize": 32.8125,
          "fontWeight": "700",
        },
        Object {},
      ]
    }
    type="bold"
  >
    Secondary Button
  </Text>
</View>
`;

exports[`Button Secondary Button success should match the snapshot 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#353434",
      "borderRadius": 75,
      "height": 107.8125,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    size="md"
    state="success"
    style={
      Array [
        Object {
          "color": "#9BDD44",
          "fontSize": 32.8125,
          "fontWeight": "700",
        },
        Object {},
      ]
    }
    type="bold"
  >
    Secondary Button
  </Text>
</View>
`;

exports[`Button Secondary Button warning should match the snapshot 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#353434",
      "borderRadius": 75,
      "height": 107.8125,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Text
    size="md"
    state="warning"
    style={
      Array [
        Object {
          "color": "#F37B0C",
          "fontSize": 32.8125,
          "fontWeight": "700",
        },
        Object {},
      ]
    }
    type="bold"
  >
    Secondary Button
  </Text>
</View>
`;
